@@ -135,6 +135,23 @@ NOTE: If it takes so long on your device that a shutdown gets issued, you may
 want to look at `upsmon` option `OFFDURATION` used to filter out temporary
 values of "administrative OFF" as not a loss of a feed for the powered load.
 
+*onlinedischarge_log_throttle_sec*='num'::
+Set the minimum frequency (in seconds) at which warnings would be emitted
+for an otherwise not handled `OL+DISCHRG` device status combination.
+Negative values disable sequentially repeated messages (when this state
+appears and persists).
++
+If the device does not report `battery.charge`, the default value is 30 seconds
+(fairly frequent, in case the UPS-reported state combination does reflect a
+bad power condition and so the situation is urgent).
++
+If it does report `battery.charge`, by default the repeated notifications
+would only be logged if this charge is different from when the message was
+emitted previously (e.g. when the battery is really discharging).
++
+If both this option is set, and `battery.charge` is correctly reported,
+either of these rules allow the notification to be logged.
+
 *disable_fix_report_desc*::
 Set to disable fix-ups for broken USB encoding, etc. which we apply by default
 on certain models (vendors/products) which were reported as not following the
